--- a/views/index.phtml
+++ b/views/index.phtml
@@ -1,37 +1,10 @@
-<html>
-<head>
-    <meta charset="utf-8"/>
-    <title>Slim 3</title>
-    <link href='//fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
-    <style>
-        body {
-            margin: 50px 0 0 0;
-            padding: 0;
-            width: 100%;
-            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-            text-align: center;
-            color: #aaa;
-            font-size: 18px;
-        }
-
-        h1 {
-            color: #719e40;
-            letter-spacing: -3px;
-            font-family: 'Lato', sans-serif;
-            font-size: 100px;
-            font-weight: 200;
-            margin-bottom: 0;
-        }
-    </style>
-</head>
-<body>
-<h1>Slim</h1>
-<div>a microframework for PHP</div>
-
-<?php if (isset($name)) : ?>
-    <h2>Hello <?= htmlspecialchars($name); ?>!</h2>
-<?php else: ?>
-<p>Try <a href="/SlimFramework">/SlimFramework</a>
-    <?php endif; ?>
-</body>
-</html>
+<?php include('_partials/_header.phtml'); ?>
+    <nav class="clearfix white bg-black">
+        <div class="sm-col">
+            <a href="<?php echo $router->pathFor('home') ?>" class="btn py2">Zones</a>
+        </div>
+        <div class="sm-col-right">
+            <a href="<?php echo $router->pathFor('configure') ?>" class="btn py2">Configure</a>
+        </div>
+    </nav>
+<?php include('_partials/_footer.phtml'); ?>
