Beginning the task of configuring zones

--- a/views/index.phtml
+++ b/views/index.phtml
@@ -1,10 +1,7 @@
 <?php include('_partials/_header.phtml'); ?>
-    <nav class="clearfix white bg-black">
-        <div class="sm-col">
-            <a href="<?php echo $router->pathFor('home') ?>" class="btn py2">Zones</a>
-        </div>
-        <div class="sm-col-right">
-            <a href="<?php echo $router->pathFor('configure') ?>" class="btn py2">Configure</a>
-        </div>
-    </nav>
+
+    <div class="container">
+        <pre><?php var_dump($zones); ?></pre>
+    </div>
+
 <?php include('_partials/_footer.phtml'); ?>
