--- a/views/_partials/_header.phtml
+++ b/views/_partials/_header.phtml
@@ -4,6 +4,20 @@
     <title>Azure DNS Manager</title>
     <link href='//fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
     <link href="/basscss.css" rel="stylesheet">
+
+    <style type="text/css">
+        html,body{
+            background: #fff;
+            font-size: 18px;
+            line-height: 20px;
+            color: #4d4d4d;
+            margin: 0;
+            padding: 0;
+        }
+        .btn-primary{
+            border-radius: 0;
+        }
+    </style>
 </head>
 <body>
 <?php include( '_navigation.phtml' ); ?>
