--- a/views/_partials/_navigation.phtml
+++ b/views/_partials/_navigation.phtml
@@ -1,6 +1,6 @@
-<nav class="clearfix white bg-black">
+<nav class="clearfix white bg-black mb3">
     <div class="sm-col">
-        <a href="<?php echo $router->pathFor('home') ?>" class="btn py2">Zones</a>
+        <a href="<?php echo $router->pathFor('zoneIndex') ?>" class="btn py2">Zones</a>
     </div>
     <div class="sm-col-right">
         <a href="<?php echo $router->pathFor('configure') ?>" class="btn py2">Configure</a>
