Making view system a little more sane

--- a/views/configuration/index.phtml
+++ b/views/configuration/index.phtml
@@ -1,4 +1,4 @@
-<?php include('_partials/_header.phtml'); ?>
+<?php include(templatePath('_partials/_header.phtml')); ?>
 
 <section class="container px2 py3">
     <h1 class="mt0">Configuration</h1>
@@ -21,4 +21,4 @@
     <?php } ?>
 </section>
 
-<?php include('_partials/_footer.phtml'); ?>
+<?php include(templatePath('_partials/_footer.phtml')); ?>
