--- a/views/index.phtml
+++ b/views/index.phtml
@@ -1,4 +1,4 @@
-<?php include('_partials/_header.phtml'); ?>
+<?php include(templatePath('_partials/_header.phtml')); ?>
 
 <div class="container">
 
@@ -38,4 +38,4 @@
     <?php } ?>
 </div>
 
-<?php include('_partials/_footer.phtml'); ?>
+<?php include(templatePath('_partials/_footer.phtml')); ?>
