Adding zones now working

--- a/views/_partials/_header.phtml
+++ b/views/_partials/_header.phtml
@@ -6,7 +6,7 @@
     <link href="/basscss.css" rel="stylesheet">
 
     <style type="text/css">
-        html,body{
+        html, body {
             background: #fff;
             font-size: 18px;
             line-height: 20px;
@@ -14,10 +14,18 @@
             margin: 0;
             padding: 0;
         }
-        .btn-primary{
+
+        .btn-primary {
             border-radius: 0;
+        }
+
+        input {
+            height: 2.25rem;
+            padding: .5rem;
+            vertical-align: middle;
+            -webkit-appearance: none;
         }
     </style>
 </head>
 <body>
-<?php include( '_navigation.phtml' ); ?>
+<?php include('_navigation.phtml'); ?>
