Adding zones now working

--- a/views/zones/index.phtml
+++ b/views/zones/index.phtml
@@ -12,6 +12,8 @@
         </div>
     </div>
 
+    <?php include(templatePath('_partials/_notifications.phtml')); ?>
+
     <?php if (count($zones) > 0){ ?>
     <table class="table-light">
         <thead>
