Boilerplate finished for record set views

--- a/views/record-sets/_partials/_A.phtml
+++ b/views/record-sets/_partials/_A.phtml
@@ -9,7 +9,8 @@
           class="p2 clearfix">
 
         <input type="hidden" name="meta[etag]" value="<?php echo $dnsEntry['etag']; ?>"/>
-        <input type="hidden" name="meta[type]" value="A"/>
+        <input type="hidden" name="meta[type]" value="ARecords" />
+        <input type="hidden" name="meta[TTL]" value="<?php echo $dnsEntry['properties']['TTL']; ?>" />
         <input type="hidden" name="meta[recordSetName]" value="<?php echo $dnsEntry['name']; ?>"/>
 
         <div class="clearfix mb1">
@@ -20,6 +21,7 @@
 
         <?php foreach ($dnsEntry['properties']['ARecords'] as $recordNumber => $aRecord) { ?>
             <?php foreach ($aRecord as $key => $value) { ?>
+                <?php $inputName = 'ARecords['. $recordNumber .']['.$key.']'; ?>
                 <div class="clearfix mb1">
                     <label class="col block col-2 right-align p1" for="<?php echo $inputName; ?>"><?php echo $key; ?></label>
                     <input class="col col-10" name="<?php echo $inputName; ?>"
@@ -28,7 +30,7 @@
             <?php }
             unset($key, $value); ?>
         <?php }
-        unset($aRecord, $recordNumber); ?>
-        <button type="submit" class="btn btn-primary right">Update</button>
+        unset($aRecord, $recordNumber, $inputName); ?>
+        <button type="submit" class="btn btn-primary right mt1">Update</button>
     </form>
 </div>
